backstage/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
spec:
  type: NodePort
  selector:
    app: backstage
  ports:
    - name: http-backend
      port: 7007
      targetPort: 7007
      nodePort: 30007
